# nesylink

./: .gitignore  README.zh.md  pyproject.toml
docs/: README.md
docs/Mathematical_logic/: task.md  环境形式化说明.md  策略形式化与证明.md
docs/Mathematical_logic/examples/: NesyLinkEnvironment.lean  agent.py  pixel_vision_demo.py  task1_fsm_bfs_agent.py  task2_fsm_bfs_agent.py  task2_reference.py  task3_fsm_bfs_agent.py  task4_fsm_bfs_agent.py  task5_fsm_bfs_agent.py
docs/guides/: env-overview.md  map-creation.md  training-config.md
docs/reference/: env-api.md  game-content.md  rewards.md  tasks-and-validators.md
nesylink/: README.md  game.py
nesylink/cnn/: CNN.md  README.md  USAGE.md  __init__.py  annotate_scene.py  components.py  export_map_png.py  generate_dataset.py  generate_synthetic_scene.py  infer_boxes.py  model.py  train.py
nesylink/cnn/checkpoints/: tiny_hybrid_cnn_aligned.pt  tiny_hybrid_cnn_aligned.weights.pt  tiny_hybrid_cnn_augmented.pt  tiny_hybrid_cnn_augmented.weights.pt  tiny_hybrid_cnn_exit_split.pt  tiny_hybrid_cnn_exit_split.weights.pt  tiny_hybrid_cnn_quality.pt  tiny_hybrid_cnn_quality.weights.pt  tiny_hybrid_cnn_retrain.pt  (+1 more)
nesylink/core/: monsters.py
nesylink/rewards/: __init__.py  base.py  context.py  loader.py
nesylink/tasks/: __init__.py  builtin.py  config.py  specs.py
nesylink/tools/: export_game_content_assets.py
nesylink/vision/: __init__.py  cnn_classifier.py  pixel_classifier.py
nesylink/wrappers/: dreamer_env.py  gym_env.py
student_agent/: __init__.py  agent.py
utils/: evaluate_policy.py  human_play.py
(+14 files in other folders)
