[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesylink"
version = "0.1.0"
description = "Gymnasium-compatible dungeon reinforcement learning environments."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = []
pygame = ["pygame>=2.5"]
dreamer = ["pillow>=10"]

[tool.setuptools.packages.find]
include = ["nesylink*", "student_agent*"]

[tool.setuptools.package-data]
nesylink = ["map_data/**/*.json", "tasks/*.yaml"]
